syntax = "proto3";

package crosschain_proto;

// Simple message which has sequence id and a buffer blob of transactions
message CrossChainMessage {
    uint64 sequence_id = 1;
	bytes transactions = 2;
	uint64 ack_id = 3;
}
